// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form should render 1`] = `
<DocumentFragment>
  <form />
</DocumentFragment>
`;

exports[`Form should render the error 1`] = `
<DocumentFragment>
  <span
    class="inline-block mt-1 text-theme-danger-500"
    data-testid="form__input--error"
  />
</DocumentFragment>
`;
